infrastructure/kubernetes/base/services/api-gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: delivery/api-gateway
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
          name: http
        - containerPort: 4099
          name: liveness
        startupProbe:
          tcpSocket:
            port: 4099
          initialDelaySeconds: 45
          periodSeconds: 5
          failureThreshold: 240
          timeoutSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 4099
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 120
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 4099
          initialDelaySeconds: 30
          periodSeconds: 20
          failureThreshold: 6
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-srv
spec:
  selector:
    app: api-gateway
  ports:
  - name: http
    protocol: TCP
    port: 4000
    targetPort: 4000
