infrastructure/kubernetes/base/services/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - delivery.test
      secretName: delivery-tls
  rules:
    - host: delivery.test
      http:
        paths:
          # gateway-service routes
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: api-gateway-srv
                port:
                  number: 4000
          # payment-service webhook (Stripe)
          - path: /webhook/payment
            pathType: Prefix
            backend:
              service:
                name: payment-srv
                port:
                  number: 4012
          # media-service WebSocket
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: media-srv
                port:
                  number: 4003
